| Summary: | ASTERISK-25494: build: GCC 5.1.x catches some new const, array bounds and missing paren issues | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2015-10-24 13:07:47 | Date Closed: | 2015-10-26 11:29:50 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_dahdi Channels/chan_sip/General Channels/chan_skinny |
| Versions: | SVN 11.20.0 13.6.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Fedora 22 w/ GCC 5.1.1 | Attachments: | |
| Description: | GCC 5.1.1 is catching a few new issues with const casts, array bounds and missing parenthesis.
| ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-10-24 13:07:48.445-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2016-12-19 18:28:27.715-0600 Change 4629 merged by Joshua Colp: chan_dahdi.c: Fix bounds check regression. [https://gerrit.asterisk.org/4629|https://gerrit.asterisk.org/4629] By: Friendly Automation (friendly-automation) 2016-12-19 19:37:44.124-0600 Change 4630 merged by Joshua Colp: chan_dahdi.c: Fix bounds check regression. [https://gerrit.asterisk.org/4630|https://gerrit.asterisk.org/4630] By: Friendly Automation (friendly-automation) 2016-12-19 19:49:11.545-0600 Change 4631 merged by Joshua Colp: chan_dahdi.c: Fix bounds check regression. [https://gerrit.asterisk.org/4631|https://gerrit.asterisk.org/4631] By: Friendly Automation (friendly-automation) 2016-12-19 22:22:50.546-0600 Change 4632 merged by George Joseph: chan_dahdi.c: Fix bounds check regression. [https://gerrit.asterisk.org/4632|https://gerrit.asterisk.org/4632] | ||