channels/chan_skinny.c
@@ -4379,7 +4379,7 @@ static int skinny_call(struct ast_channel *ast, const char *dest, int timeout)
 
 	AST_LIST_TRAVERSE(ast_channel_varshead(ast), current, entries) {
 		if (!(strcasecmp(ast_var_name(current),"SKINNY_AUTOANSWER"))) {
-			if (d->hookstate == SKINNY_ONHOOK && !sub->aa_sched < 0) {
+			if (d->hookstate == SKINNY_ONHOOK && !(sub->aa_sched < 0)) {
 				char buf[24];
 				int aatime;
 				char *stringp = buf, *curstr;
